--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>ZIIDOT L.L.C</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
