--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <!-- <h1 class="logo"><a href="index.html">Gp<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="assets/img/ZIIDOT.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="ZIIDOT.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
