--- a/index.html
+++ b/index.html
@@ -826,12 +826,12 @@
             <h4>Our Newsletter</h4>
             
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:280px;}
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
+</style> -->
 <div id="mc_embed_signup">
 <form action="https://github.us2.list-manage.com/subscribe/post?u=fcc81e43e1db5ae7b79dfaa3e&amp;id=94c7f42906" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -846,12 +846,12 @@
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value=""></div> -->
+    <div></div><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
-
+<!-- style="position: absolute; left: -5000px;" aria-hidden="true" -->
 <!--End mc_embed_signup-->
 
             <!-- <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
