--- a/index.html
+++ b/index.html
@@ -835,10 +835,9 @@
 <div id="mc_embed_signup">
 <form action="https://github.us2.list-manage.com/subscribe/post?u=fcc81e43e1db5ae7b79dfaa3e&amp;id=94c7f42906" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="indicates-required"><span class="asterisk">*</span></div>
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+	<label for="mce-EMAIL"><span class="asterisk">*</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
@@ -846,7 +845,7 @@
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div></div><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value=""></div>
+    <div></div><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value="" placeholder="E-MAIL"></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
