--- a/index.html
+++ b/index.html
@@ -836,11 +836,11 @@
 <form action="https://github.us2.list-manage.com/subscribe/post?u=fcc81e43e1db5ae7b79dfaa3e&amp;id=94c7f42906" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 <div class="indicates-required"><span class="asterisk">*</span></div>
-<div class="mc-field-group">
+<!-- <div class="mc-field-group">
 	<label for="mce-EMAIL"><span class="asterisk">*</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
+</div> -->
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
