--- a/index.html
+++ b/index.html
@@ -836,14 +836,14 @@
 <form action="https://github.us2.list-manage.com/subscribe/post?u=fcc81e43e1db5ae7b79dfaa3e&amp;id=94c7f42906" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 <div class="mc-field-group">
-	<label for="mce-EMAIL">E-mail Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<!-- <label for="mce-EMAIL">E-mail Address </label> -->
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder=" PLEASE ENTER YOUR E-mail Address">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value=""></div>
+    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fcc81e43e1db5ae7b79dfaa3e_94c7f42906" tabindex="-1" value=""></div> -->
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
