--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
+    <!-- <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <div class="owl-carousel clients-carousel">
@@ -227,7 +227,8 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section> -->
+    <!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
