--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>ZIIDOT L.L.C</span></strong>. All Rights Reserved
+        &copy; Copyright <span>ZIIDOT L.L.C</span>. All Rights Reserved
       </div>
     </div>
   </footer>
