patternme new commit

--- a/Home.html
+++ b/Home.html
@@ -34,53 +34,42 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body u-overlap u-overlap-transparent"><header class="u-clearfix u-header u-sticky u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="#" class="u-image u-logo u-image-1">
-          <img src="images/Asset3.svg" class="u-logo-image u-logo-image-1" data-image-width="224">
+  <body class="u-body u-overlap u-overlap-contrast"><header class="u-clearfix u-header u-sticky u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-valign-bottom-sm u-sheet-1">
+        <a href="#" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-image u-image-round u-logo u-radius-50 u-image-1">
+          <img src="images/Asset3.svg" class="u-logo-image u-logo-image-1" data-image-width="300">
         </a>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</symbol>
-</defs></svg>
-            </a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-palette-4-base" href="Page-1.html" style="padding: 10px 20px;">Page 1</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-palette-4-base" style="padding: 10px 20px;">Home</a>
-</li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html" style="padding: 10px 20px;">Page 1</a>
-</li></ul>
+      </div></header>
+    <section class="u-clearfix u-section-1" id="sec-c009">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout" style="">
+            <div class="u-layout-row" style="">
+              <div class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-container-style u-layout-cell u-left-cell u-size-33-md u-size-33-sm u-size-33-xs u-size-36-lg u-size-36-xl u-size-xs-60 u-white u-layout-cell-1" src="">
+                <div class="u-container-layout u-valign-bottom-lg u-valign-bottom-xl u-valign-top-sm u-container-layout-1">
+                  <h3 class="u-align-left-lg u-align-left-md u-align-left-xl u-text u-text-1"><b style="">An E-commerce website with an AI enabled pattern designer for clothing based on user data </b>.
+                  </h3>
+                  <div class="u-align-center-sm u-align-center-xs u-form u-form-1">
+                    <form action="#" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0;" source="custom" name="form-1">
+                      <div class="u-form-email u-form-group">
+                        <label for="email-f7e5" class="u-form-control-hidden u-label">Email</label>
+                        <input type="email" placeholder="" id="email-f7e5" name="email" class="u-border-2 u-border-custom-color-3 u-input u-input-rectangle u-radius-10 u-white" required="">
+                      </div>
+                      <div class="u-form-group u-form-submit">
+                        <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-custom-color-3 u-hover-white u-radius-10 u-text-body-alt-color u-text-hover-custom-color-3 u-btn-1">Submit</a>
+                        <input type="submit" value="submit" class="u-form-control-hidden">
+                      </div>
+                      <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+                      <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+                      <input type="hidden" value="" name="recaptchaResponse">
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-24-lg u-size-24-xl u-size-27-md u-size-27-sm u-size-27-xs u-size-xs-60 u-image-1" src="" data-image-width="1440" data-image-height="810">
+                <div class="u-border-7 u-border-custom-color-3 u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav>
-      </div></header>
-    <section class="u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="carousel_4b15">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-body-alt-color u-text-1">Just the right amount of everything.</h2>
-        <div class="u-form u-form-1">
-          <form action="#" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0;" source="custom" name="form-1">
-            <div class="u-form-email u-form-group">
-              <label for="email-f7e5" class="u-form-control-hidden u-label">Email</label>
-              <input type="email" placeholder="Enter a valid email address" id="email-f7e5" name="email" class="u-input u-input-rectangle u-white" required="">
-            </div>
-            <div class="u-form-group u-form-submit">
-              <a href="#" class="u-btn u-btn-rectangle u-btn-submit u-button-style u-palette-3-base u-text-body-alt-color u-btn-1">Submit</a>
-              <input type="submit" value="submit" class="u-form-control-hidden">
-            </div>
-            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-            <input type="hidden" value="" name="recaptchaResponse">
-          </form>
         </div>
       </div>
     </section>
@@ -295,7 +284,7 @@
                     <div class="u-container-layout u-valign-top u-container-layout-3">
                       <h2 class="u-text u-text-5">Contact Form</h2>
                       <div class="u-expanded-width u-form u-form-1">
-                        <form action="#" method="POST" class="u-block-2381-21 u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" source="custom">
+                        <form action="#" method="POST" class="u-block-2ba6-21 u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" source="custom">
                           <div class="u-form-group u-form-name">
                             <label for="name-e4cc" class="u-form-control-hidden u-label">Name</label>
                             <input type="text" placeholder="Enter your Name" id="name-e4cc" name="name" class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-grey-5 u-input u-input-rectangle" required="">
@@ -330,18 +319,15 @@
     
     
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/templates" target="_blank">
-        <span>Free Templates</span>
+      <a class="u-link" href="https://nicepage.com/web-design" target="_blank">
+        <span>Web Design</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
-      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
-        <span>WYSIWYG HTML Editor</span>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
       </a>. 
-    </section><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
-        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
-        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
-    </span>
+    </section>
   </body>
 </html>
