--- a/Blog-Template.html
+++ b/Blog-Template.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Blog-Template.html" data-home-page-title="Blog Template" class="u-body"><header class="u-clearfix u-header u-sticky u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-valign-bottom-sm u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-sticky u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-valign-bottom-sm u-sheet-1">
         <a href="#" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-image u-image-round u-logo u-radius-50 u-image-1">
           <img src="images/Asset3.svg" class="u-logo-image u-logo-image-1" data-image-width="300">
         </a>
