--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-20b9"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <a href="#" class="u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-image u-image-round u-logo u-radius-50 u-image-1">
           <img src="images/Asset8.png" class="u-logo-image u-logo-image-1" data-image-width="300">
         </a>
