--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Standard Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" />
+  
 
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -48,11 +49,12 @@
   <link rel="icon" type="image/png" href="apple-touch-icon-152x152.png" />
 
   <!-- Favicons meta-->
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#412a8e">
   <meta name="apple-mobile-web-app-title" content="Patternme">
   <meta name="application-name" content="Patternme">
-  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-  <meta name="theme-color" content="#d32f2f">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
