--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     mixpanel.init("7123b25ab3bac6931558bf2a7a814c7c", {batch_requests: true})   
     console.log(mixpanel) 
     console.log('here mixpanel')
+    mixpanel.track("Video play", {"genre": "hip-hop", "duration in seconds": 42});
   </script>
 
     
