--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-8 col-lg-6">
-          <h1>Beautiful Pattern Designes Personalized For You<span>.</span></h1>
+          <h1>Beautiful Pattern Designs Personalized For You<span>.</span></h1>
           <h2>Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.</h2>
         </div>
     </div>
@@ -171,6 +171,8 @@
   </section>
 
   <!-- End Hero -->
+
+
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
   <div id="preloader"></div>
