--- a/index.html
+++ b/index.html
@@ -97,8 +97,6 @@
     for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
     MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
     mixpanel.init("7123b25ab3bac6931558bf2a7a814c7c", {batch_requests: true})   
-    console.log(mixpanel) 
-    console.log('here mixpanel')
     mixpanel.track("Video play", {"genre": "hip-hop", "duration in seconds": 42});
   </script>
 
@@ -142,9 +140,9 @@
     <div class="container" data-aos="fade-up">
 
     <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
-        <div class="col-xl-8 col-lg-6">
-          <h1>Beautiful Pattern Designes Personalized For You<span>.</span></h1>
-          <h2>Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.</h2>
+        <div class="col-xl-8 col-lg-8">
+          <h1>Personalized Pattern Designs Customized For You<span>.</span></h1>
+          <h2>Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.</h2>
         </div>
     </div>
 
@@ -165,12 +163,112 @@
           <!--End mc_embed_signup-->
        </div>
       </div>
-      <h2>Subscribe now to stay updated & get a future 20$ voucher code when we lunch.</h2>
+      <div class="col-xl-12 col-lg-12">
+      <h2>Subscribe now to stay updated for our launch & get a future 20$ discount code.</h2>
+      </div>
     </div>
     </div>
   </section>
 
   <!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <img src="assets/img/vision.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+            <h1>Our Vision</h1>
+            <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick and seamless way.
+            </h2>
+            <h1>In Addition</h1>
+            <h2>Patternme is eco-friendly because it helps reduce waste, Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufacture products based on demand.
+            </h2>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h1>How Will It Work</h1>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box">
+              <h1>1. Select</h1>
+              <img src="assets/img/select.png" class="img-fluid" alt="">
+              <h2>We provide a wide range of  high quality clothing products that you can choose from for your custom patterns designs to go on.</h2>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box">
+              <h1>2. Personalize</h1>
+              <img src="assets/img/interface.png" class="img-fluid" alt="">
+              <h2>Once you select the product the site takes you to an interface for you to input the pattern design requirements.</h2>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <h1>3. Preview</h1>
+              <img src="assets/img/preview.jpg" class="img-fluid" alt="">
+              <h2>You can preview the generated pattern real time on the selected product and adjust options to get multiple different pattern designs.</h2>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <h1>4. Purchase</h1>
+              <img src="assets/img/purchase.jpg" class="img-fluid" alt="">
+              <h2>Once the order is confirmed we print the fabric with your custom pattern on it cut and sew it to the selected product and size and ship it to you.</h2>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <!-- <section id="cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3>Call To Action</h3>
+          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a class="cta-btn" href="#">Call To Action</a>
+        </div>
+
+      </div>
+    </section> -->
+    <!-- End Cta Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        <span class="Patternme">Patternme</span> &copy;2021  all rights reserved
+         <!-- All Rights Reserved -->
+      </div>
+    </div>
+  </footer>
+  <!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
   <div id="preloader"></div>
