--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="patternme.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="patternme.png" alt="patternme logo" class="img-fluid"></a>
 
 
     </div>
@@ -167,7 +167,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/vision.png" class="img-fluid" alt="">
+            <img src="assets/img/vision.png" class="img-fluid" alt="Our Vision">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h1>Our Vision</h1>
@@ -195,7 +195,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <h1>1. Select</h1>
-              <img src="assets/img/select.png" class="img-fluid" alt="">
+              <img src="assets/img/select.png" class="img-fluid" alt="select">
               <h2>We provide a wide range of  high quality clothing products that you can choose from for your custom patterns designs to go on.</h2>
             </div>
           </div>
@@ -203,7 +203,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <h1>2. Personalize</h1>
-              <img src="assets/img/interface.png" class="img-fluid" alt="">
+              <img src="assets/img/interface.png" class="img-fluid" alt="interface">
               <h2>Once you select the product the site takes you to an interface for you to input the pattern design requirements.</h2>
             </div>
           </div>
@@ -211,16 +211,16 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <h1>3. Preview</h1>
-              <img src="assets/img/preview.jpg" class="img-fluid" alt="">
-              <h2>You can preview the generated pattern real time on the selected product and adjust options to get multiple different pattern designs.</h2>
+              <img src="assets/img/preview.jpg" class="img-fluid" alt="preview">
+              <h2>You can preview the generated pattern and adjust options to your taste and get multiple different pattern designs.</h2>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <h1>4. Purchase</h1>
-              <img src="assets/img/purchase.jpg" class="img-fluid" alt="">
-              <h2>Once the order is confirmed we print the fabric with your custom pattern on it cut and sew it to the selected product and size and ship it to you.</h2>
+              <img src="assets/img/Purchase.jpg" class="img-fluid" alt="Purchase">
+              <h2>You can see a mockup of the product with the generated pattern design on it, Once the order is confirmed we print the fabric with your custom pattern on it, cut and sew it togther to the selected product and size and ship it to you !.</h2>
             </div>
           </div>
 
