--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <title>Patternme</title>
   <meta content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs." name="Patternme">
+  <meta description="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs." name="Patternme">
 
   <!-- Favicons -->
 
