--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Patternme</title>
-  <meta content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs." name="Patternme">
-  <meta description="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs." name="Patternme">
+  <meta name="description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
 
   <!-- Favicons -->
 
