--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h1>Our Vision</h1>
-            <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick and seamless way.
+            <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick, easy and seamless way.
             </h2>
-            <h1>In Addition</h1>
-            <h2>Patternme is eco-friendly because it helps reduce waste, Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufacture products based on demand.
+            <h1>Also</h1>
+            <h2>Patternme is eco-friendly because it helps reduce waste,while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufacture products based on demand.
             </h2>
           </div>
         </div>
