--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick, easy and seamless way.
             </h2>
             <h1>Also</h1>
-            <h2>Patternme is eco-friendly because it helps reduce waste,while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufacture products based on demand.
+            <h2>Patternme is eco-friendly because it helps reduce waste,while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufactures products based on demand.
             </h2>
           </div>
         </div>
