--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        <span class="Patternme">Patternme</span> &copy;2021  all rights reserved
+        &copy;Copyright <span class="Patternme">Patternme</span>. All Rights Reserved
          <!-- All Rights Reserved -->
       </div>
     </div>
