--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="icon-box">
               <h1>1. Select</h1>
               <img src="assets/img/select.png" class="img-fluid" alt="select">
-              <h2>We provide a wide range of  high quality clothing products that you can choose from for your custom patterns designs to go on.</h2>
+              <h2>Frist you select a product from the wide range of  high quality clothing products thats avalabile on the website for your custom patterns designs to go on.</h2>
             </div>
           </div>
 
