--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 
   <title>Patternme</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
+  <meta name="description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
   <meta name="keywords" content="fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, fashion accessory">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Patternme" />
   <meta property="og:url" content="https://patternme.me/" />
-  <meta property="og:description" content="Patternme is an e-commerce website that uses artificial intelligence to generate ​the best custom, on demand pattern designs for your clothes based on your needs.">
-  <meta property="og:image" content="patternme.png"><meta property="og:image:type" content="image/png" />
+  <meta property="og:description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+  <!-- <meta property="og:image" content="patternme.png"><meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
-  <meta property="og:image:alt" content="Patternme Logo" />
+  <meta property="og:image:alt" content="Patternme Logo" /> -->
 
   <!-- Favicons -->
 
